yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api-service
spec:
  selector:
    app: rick-and-morty-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
